# Khipu-vFHE

./: .gitignore  .ignore  README.md  TDX_ATTESTATION_STATUS.md
benchmark/: logreg_a_vs_c_results.md
experiment_results/: a_c_test.md  b_e_test.md
gpucc-vfhe/: CMakeLists.txt  README.md
gpucc-vfhe/benchmark/: CMakeLists.txt  benchmark_runner.cpp
gpucc-vfhe/include/client/: verifier.h
gpucc-vfhe/include/common/: attestation.h  h100_evidence_adapter.h  hashing.h  serialization.h  tcp_transport.h  transcript.h
gpucc-vfhe/include/server/: workload_registry.h
gpucc-vfhe/src/client/: client_main.cpp  verifier.cpp
gpucc-vfhe/src/common/: attestation.cpp  h100_evidence_adapter.cpp  serialization.cpp  tcp_transport.cpp
gpucc-vfhe/src/server/: server_main.cpp
gpucc-vfhe/tests/: CMakeLists.txt  test_attestation.cpp  test_hashing.cpp  test_negative.cpp  test_transcript.cpp  test_transport.cpp  test_workloads.cpp
gpucc-vfhe/workloads/: app_matvec.cpp  logistic_regression.cpp  medium_matvec.cpp  micro_add.cpp  micro_mul.cpp  micro_mul_rescale.cpp  micro_rotate.cpp  small_dot.cpp  toy.cpp
scripts/: README  benchmark_a_vs_c.sh  benchmark_b_vs_e.sh  benchmark_logreg_a_vs_c.sh  build_openfhe.sh  build_project.sh  enable_gcc11.sh  expected_mrtd.txt  integration_test.sh  preliminary_benchmark_e_vs_b.sh  run_client.sh  run_server.sh  setup_tdx_env.sh  verify_env.sh  verify_openfhe.sh
simulate/: .gitignore  README.md  print_results.py  requirements.txt  run_all.sh  validate_params.py
simulate/analyze/: aggregate.py  make_size_sweep.py  plots.py
simulate/configs/: workloads.json
simulate/data/params/: system_params.json
simulate/data/traces/: ckks_add_cold.json  ckks_add_warm.json  ckks_mult_relin_rescale_cold.json  ckks_mult_relin_rescale_warm.json  ckks_rotate_cold.json  ckks_rotate_warm.json
simulate/docker/: run_container.sh  setup_container.sh
simulate/measure/: .gitignore  Makefile  assemble_params.py  cpu_crypto_bench.c  pcie_bench.cu  run_measurements.sh  swiotlb_copy_bench.c
simulate/simulator/: __init__.py  cost_model.py  engine.py  events.py  pipeline.py  resources.py  run_sim.py
simulate/tests/: test_aggregate.py  test_cost_model.py  test_engine.py  test_events.py  test_parse_nsys.py  test_pipeline.py  test_resources.py  test_run_sim.py  test_size_sweep.py  test_validation_mode.py
simulate/tests/fixtures/: golden_trace.json  tiny_params.json  tiny_trace.json
simulate/trace/: CMakeLists.txt  bench_add.cpp  bench_bootstrap.cpp  bench_mult.cpp  bench_rotate.cpp  common.hpp  cuda_profiler_api.h  parse_nsys.py  run_nsys.sh
small_benchmarks/aes-gcm/: Makefile  bench.cpp  run.sh
tee-vfhe/: CMakeLists.txt  README.md
tee-vfhe-bgvrns/: CMakeLists.txt  README.md
tee-vfhe-bgvrns/benchmark/: benchmark_runner.cpp
tee-vfhe-bgvrns/include/common/: attestation.h  baseline_params.h  serialization.h  transcript.h
tee-vfhe-bgvrns/include/server/: workload_registry.h
tee-vfhe-bgvrns/src/client/: client_main.cpp
tee-vfhe-bgvrns/src/common/: attestation.cpp  baseline_params.cpp  hashing.cpp  tcp_transport.cpp  transcript.cpp
tee-vfhe-bgvrns/src/server/: server_main.cpp
tee-vfhe-bgvrns/tests/: CMakeLists.txt  test_attestation.cpp  test_hashing.cpp  test_negative.cpp  test_transcript.cpp  test_verifier.cpp  test_workloads.cpp
tee-vfhe-bgvrns/workloads/: app_inference.cpp  app_matvec.cpp  bgv_add_4k.cpp  bgv_mul_4k.cpp  medium_circuit.cpp  medium_matvec.cpp  micro_add.cpp  micro_modswitch.cpp  micro_mul.cpp  micro_rotate.cpp  noop.cpp  small_circuit.cpp  small_dot.cpp  toy.cpp
tee-vfhe/benchmark/: CMakeLists.txt  benchmark_runner.cpp
tee-vfhe/include/client/: verifier.h
tee-vfhe/include/server/: workload_registry.h
tee-vfhe/src/client/: client_main.cpp  verifier.cpp
tee-vfhe/src/common/: tcp_transport.cpp
tee-vfhe/src/server/: server_main.cpp  workload_registry.cpp
tee-vfhe/tests/: CMakeLists.txt  test_client.cpp  test_common.cpp  test_server.cpp  test_verifier.cpp  test_workloads.cpp
tee-vfhe/workloads/: app_inference.cpp  app_matvec.cpp  logistic_regression.cpp  medium_matvec.cpp  micro_add.cpp  micro_mul.cpp  micro_mul_rescale.cpp  micro_rotate.cpp  noop.cpp  small_dot.cpp  toy.cpp
tmp_test/: keysize_v2_out.txt  loadcontext_out.txt  pipeline_out.txt  run_full_logreg_test.sh  run_logreg_e2e.sh  run_logreg_e2e_v2.sh  run_logreg_e2e_v3.sh  run_logreg_e2e_v4.sh  test_full_pipeline.cpp  test_keysize_v2.cpp  test_loadcontext.cpp  test_logreg_timing  test_logreg_timing.cpp  timing_out.txt
zk-vfhe/: CMakeLists.txt
zk-vfhe/benchmark/: benchmark_runner.cpp
zk-vfhe/include/client/: verifier.h
zk-vfhe/include/common/: hashing.h  serialization.h  tcp_transport.h  transcript.h  zk_proof.h
zk-vfhe/include/server/: workload_registry.h
zk-vfhe/src/client/: client_main.cpp  verifier.cpp
zk-vfhe/src/common/: baseline_params.cpp  hashing.cpp  proof_generation.cpp  serialization.cpp  tcp_transport.cpp  transcript.cpp
zk-vfhe/src/server/: server_main.cpp
zk-vfhe/tests/: CMakeLists.txt  test_hashing.cpp  test_negative.cpp  test_transcript.cpp  test_workloads.cpp
zk-vfhe/workloads/: bgv_add_4k.cpp  bgv_mul_4k.cpp  medium_circuit.cpp  medium_matvec.cpp  noop.cpp  small_circuit.cpp  small_dot.cpp  toy.cpp
